include/rmi_c.h


typedef struct rmi_client_handle_* rmi_client_handle;
typedef struct rmi_server_handle_* rmi_server_handle;
typedef struct rmi_proxy_handle_* rmi_proxy_handle;
typedef struct rmi_future_handle_* rmi_future_handle;
typedef enum rmi_error {
  RMI_OK = 0, 
  RMI_ERR_NULL = -1, 
  RMI_ERR_INVALID_STATE = -2, 
  RMI_ERR_TIMEOUT = -3, 
  RMI_ERR_REMOTE_EXCEPTION = -4, 
  RMI_ERR_TRANSPORT = -5, 
  RMI_ERR_EXCEPTION = -6, 
} rmi_error;
typedef void (*rmi_proxy_event_fn)(bison_handle params, void* user);
typedef bool (*rmi_auth_fn)(bison_handle payload, char* identity_buf, size_t identity_buf_len, void* user);